[package]
name = "quicksort"
version = "0.1.0"
authors = ["Tristan Greeno"]
description = "Part of quicksort performance demo."

[lib]
name = "quicksort"
path = "./src/lib.rs"
doctest = false

[dependencies]
rand = "0.4.2"

[dev-dependencies]
criterion = "^0.2"
serde = "^1.0"
serde_json = "^1.0"

[[bench]]
name = "quicksort"
path="./benches/benchy.rs"
harness = false